--- a/public/index.html
+++ b/public/index.html
@@ -26,6 +26,7 @@
     <meta name="description" content="Mint your BlockHeadz!" />
   </head>
   <body>
+    <body scroll="no" style="overflow: hidden"></body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
