--- a/public/index.html
+++ b/public/index.html
@@ -25,8 +25,7 @@
     <title>BlockHeadz</title>
     <meta name="description" content="Mint your BlockHeadz!" />
   </head>
-  <body>
-    <body scroll="no" style="overflow: hidden"></body>
+  <body scroll="no" style="overflow: hidden">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
